--- a/ajax/index.html
+++ b/ajax/index.html
@@ -1,4 +1,4 @@
-<html>
+<!DOCTYPE html>
 <head>
     <title>Esimerkki tiedon lataamisesta</title>
     <!-- lataa tarvttavat työkalukirjastot, eli jQuery ja jQuery UI -->
