--- a/motion/index.html
+++ b/motion/index.html
@@ -1,4 +1,4 @@
-<html>
+<!DOCTYPE html>
 <head>
     <title>Esimerkki kiihtyvyysantureista</title>
     <!-- lataa tarvttavat työkalukirjastot, eli jQuery ja jQuery UI -->
