--- a/storage/index.html
+++ b/storage/index.html
@@ -1,4 +1,4 @@
-<html>
+<!DOCTYPE html>
 <head>
     <title>Esimerkki tietojen tallentamisesta</title>
     <!-- lataa tarvttavat työkalukirjastot, eli jQuery ja jQuery UI -->
