--- a/canvas/index.html
+++ b/canvas/index.html
@@ -1,4 +1,4 @@
-<html>
+<!DOCTYPE html>
 <head>
     <title>Esimerkki piirtämisestä</title>
     <!-- lataa tarvttavat työkalukirjastot, eli jQuery ja jQuery UI -->
